Small refactor for TestRecord